--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,38 +1,49 @@
-.skills__container {
+.service__container {
   grid-template-columns: repeat(2, 350px);
   column-gap: 3rem;
   justify-content: center;
   margin-top: 35px;
 }
 
-.skills__content {
-  background-color: var(--container-color);
+.service__content {
+  background-color: #fafaf6;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 2rem 4rem;
   border-radius: 1.25rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.skills__title {
+.service__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   text-align: center;
   margin-bottom: 15px;
 }
 
-.skills__box {
-  display: flex;
+.service__box {
+  display: grid;
   justify-content: center;
   column-gap: 2.5rem;
+  transition: transform 2s;
 }
 
-.skills__group {
+.service__content:hover {
+  transform: scale(1.04);
+  background-color: #ffffff;
+}
+
+.service__group {
   display: grid;
-  align-items: flex-start;
+  align-items: center;
   row-gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 2.5rem;
+  grid-template-rows: 60px;
 }
 
-.skills__data {
+.service__data {
   display: flex;
+  row-gap: 0.5rem;
   column-gap: 0.5rem;
 }
 
@@ -41,12 +52,19 @@
   color: var(--title-color);
 }
 
-.skills__name {
+.service__name {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   line-height: 18px;
 }
 
-.skills__level {
+.service__level {
   font-size: var(--smaller-font-size);
+}
+
+.section__subtitle {
+  display: block;
+  text-align: center;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-bold);
 }
