--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
   --font-semibold: 600;
   --font-bold: 700;
 
-  --shadow: 0px 5px 20px 0px rgb(69 67 96 / 10%);
+  --shadow: 2px 5px 20px 2px rgba(6, 6, 6, 0.1);
 
   --border-radius: 20px;
 }
